# AIMER

./: .coderabbit.yaml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CODE_OF_CONDUCT.md  README.md  coverage-aimer-web.xml  coverage-farm.xml  coverage-mage.xml  db.sqlite3  deployment-test-summary.md  manage.py  pyproject.toml  renovate.json  requirements.txt  sonar-project.properties  test.txt  tests.txt
AIMER-ROOT/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml
AIMER-ROOT/AIMER/: __init__.py  asgi.py  context_processors.py  language_middleware.py  layout.py  settings.py  template.py  urls.py
AIMER-ROOT/AIMER/template_helpers/: __init__.py  theme.py
AIMER-ROOT/AIMER/template_tags/: __init__.py  theme.py
AIMER-ROOT/RAG/: OPENRAG_INTEGRATION.md  __init__.py  agent.py  healthcheck.py  main.py  omop.py  query.py  recommender.py  timm_articles.py  verify_openrag.py
AIMER-ROOT/RAG/data/: timm_model_articles.json
AIMER-ROOT/RAG/scripts/: __init__.py  prompts.py  rag_tools.py  schema.py  update_timm_index.py
AIMER-ROOT/RAG/tests/: __init__.py  test_healthcheck.py  test_timm_articles.py
AIMER-ROOT/auth/: __init__.py  admin.py  apps.py  helpers.py  models.py  urls.py  views.py
AIMER-ROOT/auth/forgot_password/: __init__.py  views.py
AIMER-ROOT/auth/login/: __init__.py  views.py
AIMER-ROOT/auth/migrations/: 0001_initial.py  __init__.py
AIMER-ROOT/auth/register/: views.py
AIMER-ROOT/auth/reset_password/: __init__.py  views.py
AIMER-ROOT/auth/verify_email/: __init__.py  views.py
AIMER-ROOT/static/js/: front-main.js
AIMER-ROOT/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify_email.html
AIMER-ROOT/templates/layout/: layout_front.html  layout_horizontal.html  layout_vertical.html  master.html  system.html
AIMER-ROOT/templates/layout/bootstrap/: __init__.py  layout_blank.py  layout_front.py  layout_horizontal.py  layout_vertical.py  system.py
AIMER-ROOT/templates/layout/partials/: scripts.html  scripts_front.html  scripts_includes.html  scripts_includes_front.html  styles.html  styles_front.html
AIMER-ROOT/templates/pages/: pages_misc_comingsoon.html  pages_misc_error.html  pages_misc_not_authorized.html  pages_misc_under_maintenance.html
AIMER-ROOT/templates/partials/: logo.html  wizard_ex_checkout.html
AIMER-ROOT/templates/partials/_modals/: modal_add_new_address.html  modal_add_new_cc.html  modal_add_permission.html  modal_add_role.html  modal_create_app.html  modal_edit_cc.html  modal_edit_permission.html  modal_edit_user.html  modal_enable_otp.html  modal_pricing.html  modal_refer_earn.html  modal_select_payment_methods.html  modal_select_payment_providers.html  modal_share_project.html  modal_two_factor_auth.html  modal_upgrade_plan.html
AIMER-ROOT/templates/partials/_offcanvas/: offcanvas_add_payment.html  offcanvas_send_invoice.html
AIMER-ROOT/website/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
AIMER-ROOT/website/migrations/: __init__.py
AIMER-ROOT/website/templates/: dashboard.html  landing_page.html
FARM/: .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  info.py  manage.py  pyproject.toml  requirements.txt
FARM/FARM/: __init__.py  asgi.py  settings.py  urls.py
FARM/FARM/federated/: __init__.py  clients.py  data.py  rag.py  runner.py  strategies.py  tasks.py
FARM/framework/: asgi.py  settings.py  urls.py
FARM/tests/: test_info.py
MAGE/: Dockerfile  Dockerfile-mage-api  info.py  pyproject.toml  requirements-test.txt  requirements.txt
MAGE/api/: __init__.py  common.py  main.py
MAGE/api/services/: __init__.py  augmentations.py  encoders.py  libraries.py  models.py  modules.py
MAGE/backend/: docker-compose.yml
MAGE/backend/airflow/: Dockerfile
MAGE/backend/mlflow/: Dockerfile
MAGE/backend/omop/: README.md
MAGE/backend/omop/data/: snomed_ct.csv
MAGE/backend/pgadmin/: pgpass  servers.json
MAGE/backend/qdrant/: Dockerfile
MAGE/tests/: __init__.py  test_common.py  test_library_registry.py  test_main.py  test_timm.py  test_torchvision.py
services/FARM/: .dockerignore  Dockerfile  README.md  __init__.py  entrypoint.sh  manage.py  pyproject.toml
services/FARM/FARM/: settings.py  urls.py
services/FARM/FARM/federated/: __init__.py  clients.py  rag.py  runner.py  tasks.py
services/FARM/tests/: test_federated.py  test_health.py  test_settings.py
services/aimer-web/: .dockerignore  Dockerfile  Dockerfile.rag  entrypoint.sh  pyproject.toml
services/aimer-web/AIMER/: asgi.py  language_middleware.py  layout.py  settings.py  template.py  urls.py
services/aimer-web/AIMER/template_helpers/: theme.py
services/aimer-web/RAG/: healthcheck.py  main.py  omop.py  openrag_backend.py  query.py  recommender.py  service.py  verify_openrag.py
services/aimer-web/RAG/scripts/: rag_tools.py  schema.py
services/aimer-web/RAG/tests/: test_healthcheck.py  test_ingestion_config.py  test_openrag_backend.py  test_recommender_strict.py  test_service.py
services/aimer-web/auth/: admin.py  helpers.py  middleware.py  models.py  security.py  tests.py  tokens.py
services/aimer-web/auth/forgot_password/: views.py
services/aimer-web/auth/login/: views.py
services/aimer-web/auth/migrations/: 0002_security_audit_and_token_expiry.py
services/aimer-web/auth/register/: views.py
services/aimer-web/auth/reset_password/: views.py
services/aimer-web/auth/verify_email/: views.py
services/aimer-web/static/css/: voice-assistant.css
services/aimer-web/static/js/: auth-click-loader.js  authentication.js  voice-assistant.js
services/aimer-web/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify_email.html
services/aimer-web/templates/layout/: master.html
services/aimer-web/templates/partials/: wizard_ex_checkout.html
services/aimer-web/website/: rag_client.py  selenium_tests.py  test_rag_client.py  test_settings.py  test_voice_assistant.py  tests.py  urls.py  views.py
services/aimer-web/website/templates/: dashboard.html  landing_page.html
(+863 files in other folders)
