[project]
name = "aimer-workspace"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = []

[tool.uv]
# Limit dependency resolution to Linux/Python 3.13 so workspace locking doesn't
# fail on unsupported split environments (e.g. macOS + Python 3.14).
environments = []

[tool.uv.workspace]
members = [
  "AIMER-ROOT",
  "MAGE",
  "FARM",
]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py313"
line-length = 88
preview = true
exclude = [
    "auth/migrations",
    "geo_api/migrations",
    "db_api/migrations",
    "manage.py",
    "dashboards/migrations",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["N999", "PLW0127", "CPY001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true


[tool.ruff.lint.per-file-ignores]
"MAGE/tests/**/*.py" = ["ANN", "ARG", "D", "DOC", "EM", "INP001", "PLC0415", "PLR1702", "PLR2004", "PLR6301", "RUF029", "S101", "TRY003", "E501"]
"MAGE/info.py" = ["INP001", "PLR0915", "FURB113", "E501"]
"FARM/info.py" = ["INP001"]
"FARM/FARM/settings.py" = ["INP001"]
"FARM/FARM/urls.py" = ["INP001"]
"MAGE/api/main.py" = ["DOC201"]
"AIMER-ROOT/auth/**/*.py" = ["ANN001", "ANN201", "ANN003", "ANN401", "ARG002", "COM812", "D100", "D101", "D102", "DOC201", "E501", "FBT001", "INP001", "PLR6301", "RET503", "TC002", "TID252"]
"AIMER-ROOT/templates/layout/bootstrap/*.py" = ["ANN201", "D100", "D101", "D102", "D104", "N805", "TID252"]
"AIMER-ROOT/templates/layout/bootstrap/__init__.py" = ["D104"]
"AIMER-ROOT/website/**/*.py" = ["ANN", "ARG001", "D", "DOC201", "E501", "FBT003", "PT009", "S106", "SLF001"]
"FARM/FARM/federated/*.py" = ["TC001", "TC003", "DOC201", "DOC501", "TRY003", "EM101", "ARG001", "ARG002"]
