[project]
name = "aimer-workspace"
version = "0.1.0"
requires-python = ">=3.14.4"

dependencies = []

[tool.uv]
# Limit dependency resolution to Linux/Python 3.13 so workspace locking doesn't
# fail on unsupported split environments (e.g. macOS + Python 3.14).
environments = []

[tool.uv.workspace]
members = [
  "AIMER-ROOT",
  "MAGE",
  "FARM",
]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py313"
line-length = 88
preview = true
exclude = [
    "auth/migrations",
    "manage.py",
    "website/migrations",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "N999", "PLW0127"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
