[project]
name = "aimer-workspace"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

dependencies = []

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py313"
line-length = 88
preview = true
exclude = [
    "auth/migrations",
    "manage.py",
    "website/migrations",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "N999", "PLW0127"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
