[project]
name = "aimer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django[argon2]==6.0.3",
    "django-rich==2.2.0",
    "python-dotenv==1.2.2",
    "uvicorn==0.42.0",
    "docling[vlm]==2.84.0",
    "fastembed==0.8.0",
    "transformers==5.4.0",
    "huggingface-hub",
    "hf-xet",
    "langchain-core==1.2.24",
    "langchain-community==0.4.1",
    "langchain-qdrant==1.1.0",
    "langchain-docling==2.0.0",
    "langchain-ollama==1.0.1",
    "langgraph==1.1.4",
    "langgraph-checkpoint-sqlite==3.0.3",
    "numpy",
    "pydantic==2.12.5",
    "pypdf==6.9.2",
    "qdrant-client==1.17.1",
    "tqdm==4.67.3",
    "pytest==9.0.2",
    "coverage==7.13.5",
]

[tool.ruff]
target-version = "py312"
line-length = 88
preview = true
exclude = [
    "auth/migrations",
    "geo_api/migrations",
    "db_api/migrations",
    "manage.py",
    "dashboards/migrations",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
