[project]
name = "aimer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django[argon2]>=6.0.3",
    "django-rich==2.2.0",
    "python-dotenv==1.2.2",
    "granian==2.7.3",
    "docling[vlm]==2.84.0",
    "fastembed==0.8.0",
    "transformers==5.5.0",
    "huggingface-hub",
    "hf-xet",
    "langchain-core==1.2.26",
    "langchain-community==0.4.1",
    "langchain-qdrant==1.1.0",
    "langchain-docling==2.0.0",
    "langchain-ollama==1.1.0",
    "langgraph==1.1.6",
    "langgraph-checkpoint-sqlite==3.0.3",
    "numpy",
    "pydantic==2.12.5",
    "pypdf==6.9.2",
    "qdrant-client==1.17.1",
    "tqdm==4.67.3",
    "pytest==9.0.2",
    "coverage==7.13.5",
]
