[project]
name = "aimer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django[argon2]>=6.0.4",
    "django-rich==2.2.0",
    "python-dotenv==1.2.2",
    "granian==2.7.3",
    "docling[vlm]==2.89.0",
    "fastembed==0.8.0",
    "transformers==5.5.4",
    "huggingface-hub",
    "hf-xet",
    "langchain-core==1.3.0",
    "langchain-community==0.4.1",
    "langchain-qdrant==1.1.0",
    "langchain-docling==2.0.0",
    "langchain-ollama==1.1.0",
    "langgraph==1.1.8",
    "langgraph-checkpoint-sqlite==3.0.3",
    "numpy",
    "pydantic==2.13.1",
    "pypdf==6.10.2",
    "qdrant-client==1.17.1",
    "tqdm==4.67.3",
    "pytest==9.0.3",
    "coverage==7.13.5",
]
