[project]
name = "farm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "flwr>=1.27.0",
    # "syft-flwr==0.5.1",
]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"FARM/__init__.py" = ["N999"]
"FARM/federated/__init__.py" = ["N999"]
