[project]
name = "mage"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard-no-fastapi-cloud-cli]==0.135.3",
  "fastmcp==3.2.3",
  "keras==3.14.0",
  "segmentation-models-pytorch==0.5.0",

  # macOS (Intel + Apple Silicon)
  "tensorflow>=2.21.0 ; sys_platform == 'darwin'",

  # Linux ARM64 (aarch64)
  "tensorflow>=2.20.0 ; sys_platform == 'linux' and platform_machine == 'aarch64'",

  # Linux x86_64
  "tensorflow-cpu>=2.21.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",

  "timm>=1.0.26",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
  "tqdm>=4.67.3",
  "granian==2.7.3",
]
