[project]
name = "farm"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=6.0.4",
    "flwr==1.30.0",
    "granian==2.7.4",
    "pygments>=2.20.0",
]

[dependency-groups]
dev = [
    "coverage==7.14.0",
    "pytest==9.0.3",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = []
