[project]
name = "farm"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=6.0.6",
    "flwr==1.30.0",
    "granian==2.7.4",
    "psycopg[binary]>=3.2.13,<4.0.0",
    "pygments>=2.20.0",
    "whitenoise>=6.11.0,<7.0.0",
]

[dependency-groups]
dev = [
    "coverage==7.14.0",
    "pytest==9.0.3",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = []
