[project]
name = "aimer"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django[argon2]>=6.0.4",
    "django-rich==2.2.0",
    "python-dotenv==1.0.1",
    "granian==2.7.4",
    "docling[vlm]==2.93.0",
    "fastembed==0.8.0",
    "transformers==5.9.0",
    "huggingface-hub",
    "hf-xet",
    "langchain-core>=1.4.0,<2.0.0",
    "langchain-community==0.4.2",
    "langchain-qdrant==1.1.0",
    "langchain-docling==2.0.0",
    "langchain-ollama==1.1.0",
    "openrag>=0.4.1,<0.5.0",
    "langgraph==1.2.0",
    "langgraph-checkpoint-sqlite==3.1.0",
    "numpy",
    "packaging>=25.0",
    "pydantic==2.12.5",
    "pypdf==6.10.2",
    "qdrant-client==1.18.0",
    "tqdm==4.67.3",
    "pytest==9.0.3",
    "coverage==7.14.0",
]


[project.scripts]
verify-openrag = "RAG.verify_openrag:main"
